--- a/css/home-events.css
+++ b/css/home-events.css
@@ -9,6 +9,11 @@
 	font-style: normal;
 }
 
+rect.base-active {
+    stroke: none;
+    fill: #EEEEEE;
+}
+
 rect.room-active {
     stroke: none;
     fill: #FFD700;
@@ -176,31 +181,35 @@ h2.title {
     fill:#C71585;
 }
 
-@keyframes sonos-arcs {
-    0%          {stroke: #DAA520;}
-    20%         {stroke: #FFA500;}
-    40%, 100%   {stroke: #FF8C00;}
-}
-.sonos-arc-active {
-    animation:  sonos-arcs 2.5s ease infinite;
-}
-
 .sonos-inactive {
     stroke: #F0FFFF;
     fill: #F0FFFF;
 }
 
+@keyframes sonos-arcs {
+    0%          {stroke: #DAA520;}
+    20%         {stroke: #FFA500;}
+    60%         {stroke: #FF8C00;}
+    80%         {stroke: #F0FFFF;}
+}
+.sonos-arc-active {
+    animation-name: sonos-arcs;
+    animation-duration: 8s;
+    animation-timing-function: ease-in;
+    animation-iteration-count: infinite;
+}
+
+.sonos-arc-1 { animation-delay: 2s }
+.sonos-arc-2 { animation-delay: 2s }
+.sonos-arc-3 { animation-delay: 4s }
+.sonos-arc-4 { animation-delay: 4s }
+.sonos-arc-5 { animation-delay: 6s }
+.sonos-arc-6 { animation-delay: 6s }
+
 .sonos-arc-inactive {
     stroke: #F0FFFF;
     stroke-width: 1;
 }
-
-.sonos-arc-1 { animation-delay: 0.3s }
-.sonos-arc-2 { animation-delay: 0.3s }
-.sonos-arc-3 { animation-delay: 0.6s }
-.sonos-arc-4 { animation-delay: 0.6s }
-.sonos-arc-5 { animation-delay: 0.9s }
-.sonos-arc-6 { animation-delay: 0.9s }
 
 .lights-inactive {
     stroke:  grey;
